ffmpeg fixes